# test_ia_incidents_cars

./: .gitignore  Model_final.ipynb  README.md  eda_clean_data.ipynb  front_app.py  main_api.py  model_final.ipynb  model_v1.ipynb  pyproject.toml  requierements.txt
data/: .~lock.data_sample_front.csv#
eda_files/: output_initial.html
model/: all_columns.pickle
