[tool.poetry]
name = "test-ia-incidents-cars"
version = "0.1.0"
description = ""
authors = ["Oscar Riojas <oscarriojas@gmailcom>"]
readme = "README.md"
packages = [{include = "test_ia_incidents_cars"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scikit-learn = "^1.2.2"
plotly = "^5.14.1"
fastapi = "^0.95.2"
ydata-profiling = "4.0.0"
pandas = "1.5.3"
matplotlib = "3.2.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
